# Django-CRM

./: .gitignore  .pylintrc  readme.md
crm/: .coverage  .env  .env.template  Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  wait-for-it.sh
crm/ads/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
crm/ads/migrations/: 0001_initial.py
crm/client_stat/: apps.py  urls.py  views.py
crm/contracts/: admin.py  forms.py  models.py  urls.py  views.py
crm/contracts/migrations/: 0001_initial.py  0002_alter_contracts_options.py
crm/crm/: settings.py  urls.py
crm/customers/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
crm/customers/migrations/: 0001_initial.py
crm/leads/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
crm/leads/migrations/: 0001_initial.py  0002_alter_leads_first_name_alter_leads_last_name.py  0003_alter_leads_phone_number.py  0004_alter_leads_phone_number.py  0005_alter_leads_phone_number.py  0006_alter_leads_phone_number.py  0007_alter_leads_phone_number.py  0008_alter_leads_phone_number.py
crm/products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
crm/products/migrations/: 0001_initial.py
crm/templates/: 403.html  _base.html
crm/tests/: factories.py  test_create_ads.py  test_create_contract.py  test_customers.py  test_file_upload.py  test_leads.py  test_manager.py  test_marketing_specialist.py  test_operator.py  test_product.py
crm/user_auth/: apps.py  forms.py  models.py  urls.py  views.py
crm/user_auth/migrations/: 0001_initial.py  (+1 more)
(+114 files in other folders)
